Added awards data

--- a/AddingToFirebase/main.ipynb
+++ b/AddingToFirebase/main.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<firebase_admin.App at 0x141c41d2960>"
+       "<firebase_admin.App at 0x2711baab530>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,6 @@
    ],
    "source": [
     "import os\n",
-    "import shutil\n",
     "\n",
     "def get_user_input():\n",
     "    title = \"Guanyin Altar\"\n",
@@ -105,6 +104,83 @@
     "delete_local_images(image_paths)\n",
     "print(\"Project uploaded successfully and local images deleted!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted: ProjectImages\\LS-2.jpg\n",
+      "Award uploaded successfully and local images deleted!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#upload awards\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "categories= ['arts-and-culture','city-and-landscape', 'commercial', 'hospitality']\n",
+    "\n",
+    "def get_user_input():\n",
+    "    title = \"Lingshan Buddhist Palace\"\n",
+    "    awards= [\"1st Prize of Indoor Lighting Design- CIES 2009\"]\n",
+    "    category = categories[1]\n",
+    "    lowercasetitle= title.replace(\" \",\"-\").lower()\n",
+    "    image= f\"/{category}/{lowercasetitle}\"\n",
+    "\n",
+    "    return title, awards, category, image\n",
+    "\n",
+    "def upload_images_to_storage(title):\n",
+    "    bucket = storage.bucket()\n",
+    "    image_urls = \"\"\n",
+    "    image_paths = []\n",
+    "    \n",
+    "    for i, filename in enumerate(os.listdir(\"C:/Users/david/Desktop/Ongoing Projects/atlwebsite/AddingToFirebase/ProjectImages\")):\n",
+    "        if filename.lower().endswith(('.png', '.jpg', '.jpeg', '.gif')):\n",
+    "            file_path = os.path.join(\"ProjectImages\", filename)\n",
+    "            new_filename = f\"{title.lower().replace(' ', '-')}-{i+1}{os.path.splitext(filename)[1]}\"\n",
+    "            blob = bucket.blob(f\"awards/{new_filename}\")\n",
+    "            blob.upload_from_filename(file_path)\n",
+    "            blob.make_public()\n",
+    "            image_urls = blob.public_url\n",
+    "            image_paths.append(file_path)\n",
+    "    \n",
+    "    return image_urls, image_paths\n",
+    "\n",
+    "def insert_data_to_database(title, awards, category, image):\n",
+    "    ref = db.reference('awards')\n",
+    "    project_data = {\n",
+    "        \"awards\": awards,\n",
+    "        \"image\": image\n",
+    "    }\n",
+    "    ref.child(title.lower().replace(' ', '-')).set(project_data)\n",
+    "\n",
+    "def delete_local_images(image_paths):\n",
+    "    for path in image_paths:\n",
+    "        try:\n",
+    "            os.remove(path)\n",
+    "            print(f\"Deleted: {path}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error deleting {path}: {str(e)}\")\n",
+    "\n",
+    "title, awards, category, image = get_user_input()\n",
+    "image_urls, image_paths = upload_images_to_storage(title)\n",
+    "insert_data_to_database(title, awards, category, image_urls)\n",
+    "delete_local_images(image_paths)\n",
+    "print(\"Award uploaded successfully and local images deleted!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
