Finalized Designs and added animations

--- a/AddingToFirebase/main.ipynb
+++ b/AddingToFirebase/main.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
     "    ref = db.reference('news')\n",
     "    project_data = {\n",
     "        \"date\": date,\n",
-    "        \"image\": images,\n",
+    "        \"images\": images,\n",
     "        \"article\": article\n",
     "    }\n",
     "    ref.child(title.lower().replace(' ', '-')).set(project_data)\n",
@@ -148,13 +148,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Deleted: ProjectImages\\01大堂-1-scaled-e1684606824393.jpg\n",
+      "Deleted: ProjectImages\\1-FX-Entrance-scaled.jpg\n",
       "Project uploaded successfully and local images deleted!\n"
      ]
     }
@@ -176,7 +178,7 @@
     "\n",
     "title, date_obj, article = get_news_input()\n",
     "image_urls, image_paths = upload_images_to_storage(title)\n",
-    "insert_news_to_database( title, image_urls, date_obj, article)\n",
+    "insert_news_to_database( title, date_obj, image_urls, article)\n",
     "delete_local_images(image_paths)\n",
     "print(\"Project uploaded successfully and local images deleted!\")"
    ]
