Finished arts and culture upload

--- a/AddingToFirebase/main.ipynb
+++ b/AddingToFirebase/main.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,14 +104,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleted: ProjectImages\\1-Confucian-Palace.jpg\n",
+      "Deleted: ProjectImages\\2-Stair-Hall.jpg\n",
+      "Deleted: ProjectImages\\3-4-BambooCarving-1.jpg\n",
+      "Deleted: ProjectImages\\5-6-Candlestick-1.jpg\n",
+      "Deleted: ProjectImages\\5-6-Candlestick.jpg\n",
+      "Deleted: ProjectImages\\7-Hall-of-Benevolence.jpg\n",
+      "Deleted: ProjectImages\\8-Hall-of-Righteousness.jpg\n",
+      "Project uploaded successfully and local images deleted!\n"
+     ]
+    }
+   ],
    "source": [
     "def get_project_input():\n",
-    "    title = \"Guanyin Altar\"\n",
-    "    time = 2024\n",
-    "    location = \"ZhouShan City, China\"\n",
+    "    title = \"Confucian Palace\"\n",
+    "    time = 2019\n",
+    "    location = \"Nishan, China\"\n",
     "    category = categories[0]\n",
     "    description = open(\"description.txt\", \"r\", encoding=\"utf8\").read()\n",
     "    \n",
