Added all projects

--- a/AddingToFirebase/main.ipynb
+++ b/AddingToFirebase/main.ipynb
@@ -104,30 +104,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted: ProjectImages\\1-Confucian-Palace.jpg\n",
-      "Deleted: ProjectImages\\2-Stair-Hall.jpg\n",
-      "Deleted: ProjectImages\\3-4-BambooCarving-1.jpg\n",
-      "Deleted: ProjectImages\\5-6-Candlestick-1.jpg\n",
-      "Deleted: ProjectImages\\5-6-Candlestick.jpg\n",
-      "Deleted: ProjectImages\\7-Hall-of-Benevolence.jpg\n",
-      "Deleted: ProjectImages\\8-Hall-of-Righteousness.jpg\n",
+      "Deleted: ProjectImages\\086A0566-拷贝-681x1000.jpg\n",
+      "Deleted: ProjectImages\\086A0616-拷贝-1000x628.jpg\n",
+      "Deleted: ProjectImages\\086A0631-拷贝-1000x666.jpg\n",
+      "Deleted: ProjectImages\\10-Yoga-Room-1000x974.jpg\n",
+      "Deleted: ProjectImages\\7-Foyer-1000x667.jpg\n",
+      "Deleted: ProjectImages\\9-Sound-Therapy-Room-1000x666.jpg\n",
       "Project uploaded successfully and local images deleted!\n"
      ]
     }
    ],
    "source": [
     "def get_project_input():\n",
-    "    title = \"Confucian Palace\"\n",
-    "    time = 2019\n",
-    "    location = \"Nishan, China\"\n",
-    "    category = categories[0]\n",
+    "    title = \"Yunshu Therapy House\"\n",
+    "    time = 2023\n",
+    "    location = \"Wuxi, China\"\n",
+    "    category = categories[3]\n",
     "    description = open(\"description.txt\", \"r\", encoding=\"utf8\").read()\n",
     "    \n",
     "    return title, time, category, location, description\n",
@@ -244,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
