Final Commit, Completed Project

--- a/AddingToFirebase/main.ipynb
+++ b/AddingToFirebase/main.ipynb
@@ -162,15 +162,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted: ProjectImages\\01大堂-1-scaled-e1684606824393.jpg\n",
-      "Deleted: ProjectImages\\1-FX-Entrance-scaled.jpg\n",
+      "Deleted: ProjectImages\\ye-1000x477.jpg\n",
+      "Deleted: ProjectImages\\yeetus-600x500.jpg\n",
       "Project uploaded successfully and local images deleted!\n"
      ]
     }
@@ -179,8 +179,8 @@
     "import json\n",
     "\n",
     "def get_news_input():\n",
-    "    title = \"2022 darc Awards Shortlist\"\n",
-    "    date_string = \"Feb 10th, 2023\"\n",
+    "    title = \"1st Buddhist Architectural Lighting Design Forum\"\n",
+    "    date_string = \"Dec 1, 2018\"\n",
     "    date_string = date_string.replace(\"th\", \"\")\n",
     "    date_obj = datetime.strptime(date_string, \"%b %d, %Y\")\n",
     "    dt_str = date_obj.strftime(\"%Y-%m-%d %H:%M:%S\") \n",
