Removed some stuff

--- a/AddingToFirebase/main.ipynb
+++ b/AddingToFirebase/main.ipynb
@@ -104,29 +104,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted: ProjectImages\\086A0566-拷贝-681x1000.jpg\n",
-      "Deleted: ProjectImages\\086A0616-拷贝-1000x628.jpg\n",
-      "Deleted: ProjectImages\\086A0631-拷贝-1000x666.jpg\n",
-      "Deleted: ProjectImages\\10-Yoga-Room-1000x974.jpg\n",
-      "Deleted: ProjectImages\\7-Foyer-1000x667.jpg\n",
-      "Deleted: ProjectImages\\9-Sound-Therapy-Room-1000x666.jpg\n",
+      "Deleted: ProjectImages\\confucian-palace-1.jpg\n",
+      "Deleted: ProjectImages\\confucian-palace-2.jpg\n",
+      "Deleted: ProjectImages\\confucian-palace-3.jpg\n",
+      "Deleted: ProjectImages\\confucian-palace-4.jpg\n",
+      "Deleted: ProjectImages\\confucian-palace-5.jpg\n",
+      "Deleted: ProjectImages\\projects_confucian-palace-6.jpg\n",
+      "Deleted: ProjectImages\\projects_confucian-palace-7.jpg\n",
       "Project uploaded successfully and local images deleted!\n"
      ]
     }
    ],
    "source": [
     "def get_project_input():\n",
-    "    title = \"Yunshu Therapy House\"\n",
-    "    time = 2023\n",
-    "    location = \"Wuxi, China\"\n",
-    "    category = categories[3]\n",
+    "    title = \"Confucian Palace\"\n",
+    "    time = 2019\n",
+    "    location = \"Qufu City, China\"\n",
+    "    category = categories[0]\n",
     "    description = open(\"description.txt\", \"r\", encoding=\"utf8\").read()\n",
     "    \n",
     "    return title, time, category, location, description\n",
